--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/google-genai": "1.0.0",
-    "@genkit-ai/next": "1.0.0",
+    "@genkit-ai/google-genai": "^1.0.0",
+    "@genkit-ai/next": "^1.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -42,9 +42,9 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^10.12.2",
-    "genkit": "1.0.0",
+    "genkit": "^1.0.0",
     "lucide-react": "^0.480.0",
-    "next": "14.2.4",
+    "next": "14.2.25",
     "patch-package": "^8.0.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -59,7 +59,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "genkit-cli": "1.0.0",
+    "genkit-cli": "^1.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.2"
